<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myinstructions.MainActivity">
    <item
        android:id="@+id/action_share_tasks"
        android:orderInCategory="20"
        android:title="@string/share_tasks"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/action_scan_qr"
        android:orderInCategory="21"
        android:title="@string/scan_qr_code"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/action_share_task"
        android:orderInCategory="90"
        android:title="@string/share_task"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="40"
        android:title="@string/sort_by_recent"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/action_manage_categories"
        android:orderInCategory="50"
        android:title="@string/manage_categories"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/edit"
        app:showAsAction="ifRoom"
        android:visible="false" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="200"
        android:title="@string/delete"
        app:showAsAction="never"
        android:visible="false" />
</menu>
