<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/TaskListFragment">

    <fragment
        android:id="@+id/TaskListFragment"
        android:name="com.example.myinstructions.ui.tasklist.TaskListFragment"
        android:label="@string/task_list_title"
        tools:layout="@layout/fragment_task_list">
        <action
            android:id="@+id/action_TaskList_to_TaskDetail"
            app:destination="@id/TaskDetailFragment" />
        <action
            android:id="@+id/action_TaskList_to_TaskCreate"
            app:destination="@id/TaskCreateFragment" />
        <action
            android:id="@+id/action_TaskList_to_CategoryManage"
            app:destination="@id/CategoryManageFragment" />
        <action
            android:id="@+id/action_TaskList_to_ShareSelection"
            app:destination="@id/ShareSelectionFragment" />
        <action
            android:id="@+id/action_TaskList_to_ScanQr"
            app:destination="@id/ScanQrFragment" />
    </fragment>

    <fragment
        android:id="@+id/TaskDetailFragment"
        android:name="com.example.myinstructions.ui.taskdetail.TaskDetailFragment"
        android:label="@string/task_detail_title"
        tools:layout="@layout/fragment_task_detail">
        <argument
            android:name="taskId"
            app:argType="long" />
        <action
            android:id="@+id/action_TaskDetail_to_TaskCreate"
            app:destination="@id/TaskCreateFragment" />
        <action
            android:id="@+id/action_TaskDetail_to_ShareSelection"
            app:destination="@id/ShareSelectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/ShareSelectionFragment"
        android:name="com.example.myinstructions.ui.share.ShareSelectionFragment"
        android:label="@string/share_tasks_title"
        tools:layout="@layout/fragment_share_selection">
        <action
            android:id="@+id/action_ShareSelection_to_QrDisplay"
            app:destination="@id/QrDisplayFragment" />
    </fragment>

    <fragment
        android:id="@+id/QrDisplayFragment"
        android:name="com.example.myinstructions.ui.share.QrDisplayFragment"
        android:label="@string/qr_display_title"
        tools:layout="@layout/fragment_qr_display">
        <argument
            android:name="tasksJson"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/ScanQrFragment"
        android:name="com.example.myinstructions.ui.scan.ScanQrFragment"
        android:label="@string/scan_qr_title"
        tools:layout="@layout/fragment_scan_qr">
        <action
            android:id="@+id/action_ScanQr_to_ImportWizard"
            app:destination="@id/ImportTaskWizardFragment" />
    </fragment>

    <fragment
        android:id="@+id/ImportTaskWizardFragment"
        android:name="com.example.myinstructions.ui.scan.ImportTaskWizardFragment"
        android:label="@string/import_wizard_title"
        tools:layout="@layout/fragment_import_wizard">
        <argument
            android:name="tasksJson"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/TaskCreateFragment"
        android:name="com.example.myinstructions.ui.taskcreate.TaskCreateFragment"
        android:label="@string/create_task_title"
        tools:layout="@layout/fragment_task_create">
        <argument
            android:name="taskId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/CategoryManageFragment"
        android:name="com.example.myinstructions.ui.category.CategoryManageFragment"
        android:label="@string/manage_categories_title"
        tools:layout="@layout/fragment_category_manage" />

</navigation>
